<resources>
    <string name="app_name">GraphiApp</string>
    <string name="user_name">Nombre: </string>
    <string name="user_surname">Apellidos: </string>
    <string name="surname_hint">Introduzca sus apellidos</string>
    <string name="play">Jugar</string>
    <string name="help">Ayuda</string>
    <string name="back">Atrás</string>
    <string name="profile">Perfil</string>
    <string name="closeSession">Cerrar sesión</string>
    <string name="individual">Individual</string>
    <string name="virtualClass">Clase virtual</string>
    <string name="begin">Comenzar</string>
    <string name="level1">Nivel 1</string>
    <string name="level2">Nivel 2</string>
    <string name="level3">Nivel 3</string>
    <string name="level4">Nivel 4</string>
    <string name="level5">Nivel 5</string>
    <string name="level8">Nivel 8</string>
    <string name="hearWord">Escuchar palabra</string>
    <string name="confirm">Confirmar</string>
    <string-array name="drawer_items">
        <item>@string/profile</item>
        <item>@string/closeSession</item>
    </string-array>
    <string name="userType">Tipo de usuario</string>
    <string name="alumn">Alumno</string>
    <string name="teacher">Docente</string>
    <string name="userData">Datos de usuario</string>
    <string name="writeYourName">Escribe tu nombre</string>
    <string name="writeYourSurname">Escribe tus apellidos</string>
    <string name="enterPassword">Introduce una contraseña</string>
    <string name="register">Registrarse</string>
    <string name="goToLogin">Ir a iniciar sesión</string>
    <string name="registerLabel">Registro</string>
    <string name="errorLoginRadioButtons">Escoge el tipo de usuario</string>
    <string name="registerError">No se ha podido realizar el registro correctamente</string>
    <string name="registerCompleted">Se ha completado el registro. Tu nickname es</string>
    <string name="loginNameHint">Escribe tu nickname</string>
    <string name="signIn">Iniciar sesión</string>
    <string name="userHomeLabel">¡Bienvenido usuario!</string>
    <string name="applicationHelpLabel">Ayuda</string>
    <string name="gameModesLabel">Modos de juego</string>
    <string name="individualModeLabel">Modo individual</string>
    <string name="levelsLabel">Niveles</string>
    <string name="level1Label">Nivel 1</string>
    <string name="level2Label">Nivel 2</string>
    <string name="level3Label">Nivel 3</string>
    <string name="level4Label">Nivel 4</string>
    <string name="level5Label">Nivel 5</string>
    <string name="loginErrorToast">Error al inicio. Login, contraseña o tipo de usuario incorrecto</string>
    <string name="level8Label">Nivel 8</string>
    <string name="agudas">Agudas</string>
    <string name="llanas">Llanas</string>
    <string name="esdrujulas">Esdrújulas</string>
    <string name="newClassHint">Introduce el nombre de la clase</string>
    <string name="postClassStartBtn">Empieza a postear</string>
    <string name="registerClassError">No se ha podido registrar la clase</string>
    <string name="correctWord">Palabra correcta: </string>
    <string name="incorrectWord">Palabra incorrecta: </string>
    <string name="addExercise">AÑADIR</string>
    <string name="nextLevel">SIGUIENTE NIVEL</string>
    <string name="endPosting">ACABAR</string>
    <string name="noStressWord">Palabra sin tilde: </string>
    <string name="stressPosition">Posición de la tilde: </string>
    <string name="audioRec">GRABAR AUDIO</string>
    <string name="previousLevel">Nivel Anterior</string>
    <string name="picPicker">SELECCIONA IMAGEN</string>
    <string name="headLineString">Introduce el titular: </string>
    <string name="iWordPos">Posición de la palabra a corregir: </string>
    <string name="sWording1">Introduce la frase 1. Denota el hueco con 3 asteriscos: </string>
    <string name="sWording2">Introduce la frase 2. Denota el hueco con 3 asteriscos: </string>
    <string name="wWording1">Introduce la palabra correcta para la frase 1:  </string>
    <string name="wWording2">Introduce la palabra correcta para la frase 2:  </string>
    <string name="wordL8">Introduce la palabra: </string>
    <string name="kindaStress">¿Qué acentuación tiene?</string>
    <string name="graveStress">Esdrújula</string>
    <string name="acuteStress">Aguda</string>
    <string name="plainStress">Llana</string>
    <string name="onClassRetrieveFail">Error al descargarse las clases</string>
    <string name="resultsName">Alumno </string>
    <string name="resultsL1">Nivel 1 </string>
    <string name="resultsL2">Nivel 2 </string>
    <string name="resultsL3">Nivel 3 </string>
    <string name="resultsL4">Nivel 4 </string>
    <string name="resultsL5">Nivel 5 </string>
    <string name="resultsL8">Nivel 8 </string>
    <string name="onResultRetrieveFail">Error al descargar los resultados</string>
    <string name="onPostLevel1Fail">Error. No se ha añadido el ejercicio</string>
    <string name="onPostLevel1Success">Se ha añadido el ejercicio correctamente</string>
    <string name="exerciseNotCompletedYet">No completado</string>
    <string name="noCamera">No se detecta una cámara disponible en el dispositivo</string>
    <string name="no_app">No existe una app que pueda realizar esta acción</string>
    <string name="putPin">Introduce el pin de la clase</string>
    <string name="no_mic">Este teléfono no puede grabar audio</string>
    <string name="no_audio_record_app">No existe aplicación para grabar audio</string>
    <string name="onFileUploadSuccess">El fichero se ha subido con éxito</string>
    <string name="onFileUploadFail">Error, no se ha podido subir el fichero</string>
    <string name="returnToRegister">Volver al registro</string>
</resources>
