<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="eus.ehu.tta.graphiapp.PostLevel8Activity"
    android:orientation="vertical">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/wordL8"/>
    <EditText
        android:id="@+id/wordL8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/kindaStress"/>
    <RadioGroup
        android:id="@+id/kindaStressRGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RadioButton
            android:id="@+id/idAguda"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/acuteStress"/>
        <RadioButton
            android:id="@+id/idLlana"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/plainStress"/>
        <RadioButton
            android:id="@+id/idEsdrujula"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/graveStress"/>
    </RadioGroup>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/addExercise"
        android:onClick="addL8Exercise"/>
    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="2">
        <Button
            android:layout_width="wrap_content"
            android:text="@string/previousLevel"
            android:layout_gravity="left"
            android:onClick="level5"/>
        <Button
            android:layout_width="wrap_content"
            android:text="@string/endPosting"
            android:layout_gravity="right"
            android:onClick="endPosting"/>
    </GridLayout>

</LinearLayout>
