<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="eus.ehu.tta.graphiapp.PostLevel1Activity"
    android:orientation="vertical">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/correctWord"/>
    <EditText
        android:id="@+id/cWordL1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/incorrectWord"/>
    <EditText
        android:id="@+id/iWordL1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <Button
        android:id="@+id/l1AddBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/addExercise"
        android:onClick="addL1Exercise"/>
    <Button
        android:id="@+id/toLevel2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nextLevel"
        android:onClick="level2"/>

</LinearLayout>
