<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="eus.ehu.tta.graphiapp.VirtualClassActivity">

    <EditText
        android:id="@+id/claseVirtualPinEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/putPin"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="startVirtualClass"
        android:text="@string/begin"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="goBack"
        android:text="@string/back"/>

</LinearLayout>
