<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.GridLayout
        android:id="@+id/level8Grid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:columnCount="3">

    </android.support.v7.widget.GridLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/level8CajaAgudas"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/agudas"
            android:background="@drawable/cajaagudas" />
        <TextView
            android:id="@+id/level8CajaLlanas"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/llanas"
            android:background="@drawable/cajallanas" />
        <TextView
            android:id="@+id/level8CajaEsdrujulas"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/esdrujulas"
            android:background="@drawable/cajaesdrujulas" />
    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/back"
        android:onClick="goBack"/>
</LinearLayout>